# pg_duckpipe

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PROCESS.md  PROGRESS.md  README.md  docker-bake.hcl  pg_ducklake_sync.control  pg_duckpipe.control  progress.md
.github/workflows/: ci.yaml  docker.yaml
benchmark/: .gitignore  README.md  analyze_results.py  bench.sh  bench_suite.sh  start_db.sh
doc/: CODE_WALKTHROUGH.md  DESIGN.md  DESIGN_V2.md  IMPLEMENTATION_PLAN.md  REMOTE_SYNC.md  STANDALONE_DESIGN.md  USAGE.md
docker/: fetch-ducklake-ext.sh
duckpipe-core/: Cargo.toml
duckpipe-core/src/: connstr.rs  decoder.rs  duckdb_flush.rs  error.rs  flush_coordinator.rs  flush_worker.rs  lib.rs  log.rs  metadata.rs  queue.rs  service.rs  slot_consumer.rs  snapshot.rs  state.rs  types.rs
duckpipe-daemon/: Cargo.toml
duckpipe-daemon/src/: main.rs
duckpipe-pg/: Cargo.toml  build.rs  pg_duckpipe.control
duckpipe-pg/src/: api.rs  lib.rs  worker.rs
duckpipe-pg/src/sql/: bootstrap.sql
sql/: pg_ducklake_sync--1.0.sql  pg_duckpipe--1.0.sql
src/: api.c  apply.c  batch.c  decoder.c  pg_ducklake_sync.c  pg_ducklake_sync.h  pg_duckpipe.c  pg_duckpipe.h  worker.c
test/: ducklake_sync.conf
test/expected/: basic.out
test/regression/: Makefile  regression.conf  schedule
test/regression/expected/: api.out  auto_start.out  composite_pk.out  concurrent_tables.out  data_types.out  error_recovery.out  large_transaction.out  monitoring.out  multi_group.out  multiple_tables.out  premature_catchup.out  rename_table.out  (+7 more)
test/sql/: basic.sql
(+19 files in other folders)
